--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       <a class="restart-button">New Game</a><br>
       <br><a class="ai-button">AI</a>
+      <a class="aiStop-button">Stop</a>
+      <a class="aiStep-button">Step</a>
     </div>
+    
+
 
     <div class="moves-table">
       <div class="moves-row">
