--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     <div class="moves-table">
       <div class="moves-row">
         <div class="moves-ai-label">AI:</div><div class="moves-ai">0</div><div class="moves-ai-percent">0%</div>
-      </div><div class="moves-row">
+      </div>
+      <div class="moves-row">
+        <div class="moves-ml-label">ML:</div><div class="moves-ml">0</div><div class="moves-ml-percent">0%</div>
+      </div>
+      <div class="moves-row">
         <div class="moves-human-label">Human/other:</div><div class="moves-human">0</div
       </div>
     </div>
@@ -91,7 +95,7 @@
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, from <a href="http://git.io/2048">http://git.io/2048</a>.  Modified by James Grant. Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, from <a href="http://git.io/2048">http://git.io/2048</a>.  AI elements by James Grant. Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
@@ -105,5 +109,7 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+  <script src="js/cloud.js"></script>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.20.min.js"></script>
 </body>
 </html>
