Testing VS Code

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <hr>
     <p>
     Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, from <a href="http://git.io/2048">http://git.io/2048</a>.  AI elements by James Grant. Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Test
     </p>
   </div>
 
